--- a/page1.html
+++ b/page1.html
@@ -42,13 +42,13 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/h">how to make your own website for free</a></section><section class="mbr-section mbr-after-navbar" id="image2-a" data-rv-view="338">
+<section class="engine"><a href="https://mobirise.co/h">how to make a website</a></section><section class="mbr-section mbr-after-navbar" id="image2-a" data-rv-view="338">
     <div class="mbr-section__container container mbr-section__container--first">
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
                 <figure class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--caption-outside-bottom mbr-figure--no-bg">
 
-                    <div><img src="assets/images/picture1-1-1400x788.png" class="mbr-figure__img"></div>
+                    <div><img src="assets/images/picture1-1400x788.png" class="mbr-figure__img"></div>
                     
                 </figure>
             </div>
