--- a/page2.html
+++ b/page2.html
@@ -42,7 +42,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">web builder</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="features1-8" data-rv-view="332" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="features1-8" data-rv-view="332" style="background-color: rgb(255, 255, 255);">
     
     
     <div class="mbr-section__container container mbr-section__container--std-top-padding" style="padding-top: 124px;">
