create github pages

--- a/page1.html
+++ b/page1.html
@@ -42,26 +42,18 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/h">how to make a website</a></section><section class="mbr-section mbr-after-navbar" id="image2-a" data-rv-view="338">
-    <div class="mbr-section__container container mbr-section__container--first">
-        <div class="row">
-            <div class="col-sm-8 col-sm-offset-2">
-                <figure class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--caption-outside-bottom mbr-figure--no-bg">
-
-                    <div><img src="assets/images/picture1-1400x788.png" class="mbr-figure__img"></div>
-                    
-                </figure>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="mbr-section" id="content1-b" data-rv-view="340">
-    <div class="mbr-section__container container mbr-section__container--last">
+<section class="engine"><a href="https://mobirise.co/e">website creation software</a></section><section class="mbr-section mbr-after-navbar" id="content1-b" data-rv-view="340">
+    <div class="mbr-section__container container mbr-section__container--isolated">
         <div class="row">
             <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2">Pelbagai pakej kami sediakan untuk anda semua!!!</div>
         </div>
     </div>
+</section>
+
+<section class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--caption-inside-bottom" id="image1-h" data-rv-view="359">
+
+    <div><img src="assets/images/picture1-1400x788.png" class="mbr-figure__img"></div>
+    
 </section>
 
 <footer class="mbr-section mbr-section--relative mbr-section--fixed-size" id="footer1-5" data-rv-view="329" style="background-color: rgb(68, 68, 68);">
